fix: 오늘의 조합 홈 조회 DTO 수정
Related: #101